# printfF

./: .gitignore  CMakeLists.txt  Makefile  ft_printf.c  ft_printf.h  main.c  parser.c  test orig.c  utils.c
Libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_memccpy.c  ft_memcpy.c  ft_memset.c  ft_putchar_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  libft.h
Libft/includes/: libft.h
Libft/src/: ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_memchr.c  ft_memcmp.c  ft_memmove.c  ft_numlen.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strjoin.c  ft_substr.c  ft_tolower.c  ft_toupper.c
includes/: ft_printf.h
src/: ft_printf.c  ft_typeparser.c  ftp_apply_type.c  ftp_c.c  ftp_di.c  ftp_p.c  ftp_parser.c  ftp_s.c  ftp_u.c  ftp_utils.c  ftp_xX.c
test/: test.c  test_di.c  test_parser.c
